--- a/about.html
+++ b/about.html
@@ -1,1 +1,16 @@
-<h1>Opa, bao??</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Exemplo de página HTML</title>
+</head>
+<body>
+<h1>Bem-vindo a minha pagina</h1>
+<p>Este e um exemplo básico de uma página HTML. Aqui você pode escrever qualquer conteúdo que desejar.</p>
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+</ul>
+<a href="https://www.example.com">Clique aqui</a> para visitar o site exemplo.
+</body>
+</html>
